Bug 531714 - Switch Expressions - Enabling Preview check addition post-merge